kubernetes_files/rains-forcast-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rains-forcast-api-service
  labels:
    app: rains-forcast-api
spec:
  type: ClusterIP
  ports:
  - port: 8000 
    protocol: TCP
    targetPort: 8000
  selector:
    app: rains-forcast-api
